2011-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/res_mkupdate.c (res_mkupdate):
	Remove unused var "sp1".
	* libfs/src/dosfs/msdos_file.c (msdos_file_datasync):
	Remove unused var "rc". 

2011-10-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/btimer.h: Introduce benchmark_timer_t.
	Let benchmark_timer_read return benchmark_timer_t.

2011-10-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1939/cpukit
	* rtems/src/ratemonperiod.c: Fixed type mismatch.

2011-10-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/rtems/libio.h, libcsupport/src/termios.c:
	Use size_t for sizes.

2011-10-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/pipe/fifo.c: Conditionally use var "sc".
	* libmisc/shell/fts.c: Conditionally use var "nostat".
	* pppd/options.c: Remove unused var "ok".
	* libnetworking/rtems/rtems_dhcp.c: Remove unused var
	"disconnected".

2011-10-17	Daniel Hellstrom <daniel@gaisler.com>

	PR 1935/cpukit
	* score/include/rtems/score/smplock.h, score/src/smplock.c: SMP nested
	count variable was being overritten when nested lock was taken more
	than once.

2011-10-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1938/cpukit
	* score/include/rtems/score/thread.h: Removed obsolete suspend_count
	field from Thread_Control.

2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-system.c (rtems_rfs_fs_open):
	Comment out unused vars "group", "group_base".
	* libmisc/monitor/mon-editor.c (rtems_monitor_task):
	Comment out unused vars "debugee", "rp", "fp".
	* posix/src/alarm.c: Make _POSIX_signals_Alarm_TSR static.
	Remove unused var "status".
	* libmisc/shell/main_ls.c: Comment out unused var kflag.
	* posix/src/ualarm.c: Make _POSIX_signals_Ualarm_TSR static.

2011-10-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/mouse/serial_mouse.c (serial_mouse_initialize):
	Remove unused var "status" (Avoid warnings).
